build_logs/last_build_fail.txt
/usr/bin/cmake -S/workspaces/mistable -B/workspaces/mistable/build --check-build-system CMakeFiles/Makefile.cmake 0
/usr/bin/cmake -E cmake_progress_start /workspaces/mistable/build/CMakeFiles /workspaces/mistable/build//CMakeFiles/progress.marks
make  -f CMakeFiles/Makefile2 all
make[1]: Entering directory '/workspaces/mistable/build'
make  -f CMakeFiles/freertos_kernel.dir/build.make CMakeFiles/freertos_kernel.dir/depend
make[2]: Entering directory '/workspaces/mistable/build'
cd /workspaces/mistable/build && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /workspaces/mistable /workspaces/mistable /workspaces/mistable/build /workspaces/mistable/build /workspaces/mistable/build/CMakeFiles/freertos_kernel.dir/DependInfo.cmake "--color="
Dependencies file "CMakeFiles/freertos_kernel.dir/third_party/FreeRTOS-Kernel/portable/MemMang/heap_4.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/freertos_kernel.dir/compiler_depend.internal".
Dependencies file "CMakeFiles/freertos_kernel.dir/third_party/FreeRTOS-Kernel/tasks.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/freertos_kernel.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target freertos_kernel
make[2]: Leaving directory '/workspaces/mistable/build'
make  -f CMakeFiles/freertos_kernel.dir/build.make CMakeFiles/freertos_kernel.dir/build
make[2]: Entering directory '/workspaces/mistable/build'
make[2]: Nothing to be done for 'CMakeFiles/freertos_kernel.dir/build'.
make[2]: Leaving directory '/workspaces/mistable/build'
[ 13%] Built target freertos_kernel
make  -f pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/build.make pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/depend
make[2]: Entering directory '/workspaces/mistable/build'
cd /workspaces/mistable/build && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /workspaces/mistable /workspaces/mistable/third_party/pico-sdk/src/common/pico_stdlib /workspaces/mistable/build /workspaces/mistable/build/pico-sdk/common/pico_stdlib /workspaces/mistable/build/pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/DependInfo.cmake "--color="
Dependencies file "pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/stdlib.c.o.d" is newer than depends file "/workspaces/mistable/build/pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target pico_stdlib
make[2]: Leaving directory '/workspaces/mistable/build'
make  -f pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/build.make pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/build
make[2]: Entering directory '/workspaces/mistable/build'
make[2]: Nothing to be done for 'pico-sdk/common/pico_stdlib/CMakeFiles/pico_stdlib.dir/build'.
make[2]: Leaving directory '/workspaces/mistable/build'
[ 21%] Built target pico_stdlib
make  -f pico-sdk/CMakeFiles/hardware_spi.dir/build.make pico-sdk/CMakeFiles/hardware_spi.dir/depend
make[2]: Entering directory '/workspaces/mistable/build'
cd /workspaces/mistable/build && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /workspaces/mistable /workspaces/mistable/third_party/pico-sdk/src /workspaces/mistable/build /workspaces/mistable/build/pico-sdk /workspaces/mistable/build/pico-sdk/CMakeFiles/hardware_spi.dir/DependInfo.cmake "--color="
Dependencies file "pico-sdk/CMakeFiles/hardware_spi.dir/spi.c.o.d" is newer than depends file "/workspaces/mistable/build/pico-sdk/CMakeFiles/hardware_spi.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target hardware_spi
make[2]: Leaving directory '/workspaces/mistable/build'
make  -f pico-sdk/CMakeFiles/hardware_spi.dir/build.make pico-sdk/CMakeFiles/hardware_spi.dir/build
make[2]: Entering directory '/workspaces/mistable/build'
make[2]: Nothing to be done for 'pico-sdk/CMakeFiles/hardware_spi.dir/build'.
make[2]: Leaving directory '/workspaces/mistable/build'
[ 30%] Built target hardware_spi
make  -f CMakeFiles/mistable_phase1.dir/build.make CMakeFiles/mistable_phase1.dir/depend
make[2]: Entering directory '/workspaces/mistable/build'
cd /workspaces/mistable/build && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /workspaces/mistable /workspaces/mistable /workspaces/mistable/build /workspaces/mistable/build /workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/DependInfo.cmake "--color="
Dependencies file "CMakeFiles/mistable_phase1.dir/src/log.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/compiler_depend.internal".
Dependencies file "CMakeFiles/mistable_phase1.dir/src/main.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/compiler_depend.internal".
Dependencies file "CMakeFiles/mistable_phase1.dir/src/status.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/compiler_depend.internal".
Dependencies file "CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/compiler_depend.internal".
Dependencies file "CMakeFiles/mistable_phase1.dir/src/video/video_engine.c.o.d" is newer than depends file "/workspaces/mistable/build/CMakeFiles/mistable_phase1.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target mistable_phase1
make[2]: Leaving directory '/workspaces/mistable/build'
make  -f CMakeFiles/mistable_phase1.dir/build.make CMakeFiles/mistable_phase1.dir/build
make[2]: Entering directory '/workspaces/mistable/build'
[ 34%] Building C object CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o
/usr/bin/cc  -I/workspaces/mistable/src -I/workspaces/mistable/src/video -I/workspaces/mistable/src/usb -I/workspaces/mistable/src/storage -I/workspaces/mistable/third_party/pico-sdk/include -I/workspaces/mistable/third_party/FreeRTOS-Kernel/include -I/workspaces/mistable/build/generated/pio -I/workspaces/mistable/third_party/pico-sdk/src/common/pico_stdlib/../../../include -I/workspaces/mistable/third_party/pico-sdk/src/../include -std=gnu11 -MD -MT CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o -MF CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o.d -o CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o -c /workspaces/mistable/src/video/tmds_pio.c
In file included from /workspaces/mistable/src/video/tmds_pio.c:4:
/workspaces/mistable/third_party/pico-sdk/include/hardware/gpio.h:5:30: error: unknown type name ‘uint’; did you mean ‘int’?
    5 | static inline void gpio_init(uint pin) {(void)pin;}
      |                              ^~~~
      |                              int
/workspaces/mistable/third_party/pico-sdk/include/hardware/gpio.h:6:33: error: unknown type name ‘uint’; did you mean ‘int’?
    6 | static inline void gpio_set_dir(uint pin, bool out) {(void)pin;(void)out;}
      |                                 ^~~~
      |                                 int
/workspaces/mistable/third_party/pico-sdk/include/hardware/gpio.h:7:29: error: unknown type name ‘uint’; did you mean ‘int’?
    7 | static inline void gpio_put(uint pin, bool value) {(void)pin;(void)value;}
      |                             ^~~~
      |                             int
/workspaces/mistable/src/video/tmds_pio.c: In function ‘tmds_pio_init’:
/workspaces/mistable/src/video/tmds_pio.c:7:3: warning: implicit declaration of function ‘gpio_init’; did you mean ‘spi_init’? [-Wimplicit-function-declaration]
    7 |   gpio_init(PIN_DVI_D2_P);
      |   ^~~~~~~~~
      |   spi_init
make[2]: *** [CMakeFiles/mistable_phase1.dir/build.make:132: CMakeFiles/mistable_phase1.dir/src/video/tmds_pio.c.o] Error 1
make[2]: Leaving directory '/workspaces/mistable/build'
make[1]: *** [CMakeFiles/Makefile2:147: CMakeFiles/mistable_phase1.dir/all] Error 2
make[1]: Leaving directory '/workspaces/mistable/build'
make: *** [Makefile:91: all] Error 2
